# PopUpTutoringApp

./: .gitignore  LICENSE  requirements.txt
c++ implementations/event_listener/: CMakeLists.txt  key_processor.cpp  key_processor.h  keyboard_listener.py  py_bindings.cpp
experiments/ex1/: config.py  event_listener.py  main.py  player.py  recorder.py
experiments/ex2/: audio_controller.py  audio_viwer.py  recording.json
interactive_tutorial/: detect_button.py  main.py  overlay.py  tempCodeRunnerFile.py
tests/: test_base_controller.py  test_event_listener.py  test_player_controller.py  test_player_mini_view.py  test_recorder_controller.py  ubuntu.json
training_assistant/: .gitignore  guide.md  installer_script.iss  main.py  settings.json  tempCodeRunnerFile.py
training_assistant/controllers/: audio_controller.py  base_controller.py  event_listener.py  player_controller.py  recorder_controller.py  settings_controller.py
training_assistant/models/: models.py
training_assistant/tutorials/: df.json  dfdfgdfg.json  docker2.json  how_to_download_film_using_seedr.json  jajak.json  new.json  new33.json  testing_1.json
training_assistant/utils/: pdf_utility.py
training_assistant/utils/event_listener/: __init__.py  base_listener.py  event_listener.py  key_processor.py  keyboard_listener.py  mouse_listener.py
training_assistant/views/: home_view.py  mini_view_base.py  player_mini_view.py  player_view.py  record_view.py  recorder_mini_view.py  recorder_view.py  settings_view.py
